# tame-oauth

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.ci/: lint.sh  test.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: default_creds.rs  default_creds_id_token.rs  svc_account.rs  svc_account_id_token.rs
src/: error.rs  gcp.rs  id_token.rs  jwt.rs  lib.rs  sign.rs  token.rs  token_cache.rs
src/gcp/: end_user.rs  external_account.rs  jwt.rs  metadata_server.rs  mod.rs  service_account.rs
tests/: svc_key.json
