[package]
name = "tame-oauth"
version = "0.4.0"
authors = ["Embark <opensource@embark-studios.com>", "Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
description = "A (very) simple oauth 2.0 library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tame-oauth"
homepage = "https://github.com/EmbarkStudios/tame-oauth"
repository = "https://github.com/EmbarkStudios/tame-oauth"
keywords = ["oauth", "tame", "sans-io", "gcp"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
base64 = "0.11.0"
chrono = "0.4.10"
http = "0.2.0"
lock_api = "0.3.2"
parking_lot = "0.10.0"
ring = { version = "0.16.9", optional = true }
serde = { version = "1.0.103", features = [ "derive" ] }
serde_json = "1.0.44"
twox-hash = { version = "1.5.0", default-features = false }
url = { version = "2.1.0", optional = true }

[dev-dependencies]
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", rev = "18fd9a6", default-features = false, features = [ "rustls-tls", "blocking" ] }

[features]
default = ["gcp"]
gcp = ["jwt", "url"]
jwt = ["ring"]
