[package]
name = "tame-oauth"
version = "0.4.5"
authors = ["Embark <opensource@embark-studios.com>", "Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"
description = "A (very) simple oauth 2.0 library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tame-oauth"
homepage = "https://github.com/EmbarkStudios/tame-oauth"
repository = "https://github.com/EmbarkStudios/tame-oauth"
keywords = ["oauth", "tame", "sans-io", "gcp"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[lib]
doctest = false
path = "src/lib.rs"

[dependencies]
base64 = "0.12" # Keep aligned with rustls
chrono = "0.4"
http = "0.2"
lock_api = "0.4"
parking_lot = "0.11"
ring = { version = "0.16", optional = true }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
twox-hash = { version = "1.5.0", default-features = false }
url = { version = "2.1", optional = true }

[dev-dependencies.reqwest]
version = "0.10"
default-features = false
features = ["rustls-tls"]

[dev-dependencies.tokio]
version = "0.2"
features = ["macros"]

[features]
default = ["gcp"]
gcp = ["jwt", "url"]
jwt = ["ring"]
